# llama_cpp_rs_chat

./: $null  .crush.json  .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .mcp.json  .prettierrc  AGENTS.md  BACKEND_TRANSLATION_COMPLETE.md  CLAUDE.md  CMAKE_SETUP.md  CUDA_SETUP.md  CURRENT_TASK.MD  CURRENT_TASK.md  Cargo.toml  DESKTOP_TODO.md  Dockerfile  Dockerfile.backend  Dockerfile.cuda  Dockerfile.dev  Dockerfile.test-cmake  Dockerfile.web  FEATURES_REMOVED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MODEL_COMPARISON.md  MODEL_COMPATIBILITY_DESIGN.md  README-Docker.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SETUP_COMPLETE.md  TESTING_RESULTS.md  TEST_AI_CAPABILITIES.md  TEST_PATH_FIX.md  TEST_REPORT.md  TODO.md  (+60 more)
crates/llama-chat-command/: Cargo.toml
crates/llama-chat-command/src/: background.rs  execution.rs  lib.rs  output.rs  rtk.rs  utils.rs
crates/llama-chat-command/src/execution/: pty.rs  streaming.rs  tests.rs
crates/llama-chat-db/: Cargo.toml
crates/llama-chat-db/src/: agent_heartbeat.rs  agents.rs  config.rs  conversation.rs  conversation_config.rs  conversation_context.rs  event_log.rs  hub_downloads.rs  lib.rs  logger.rs  mcp.rs  migration.rs  pending_approvals.rs  schema.rs
crates/llama-chat-db/src/config/: tests.rs
crates/llama-chat-db/src/conversation/: compaction.rs  messages.rs  mod.rs  queries.rs  tests.rs
crates/llama-chat-db/src/schema/: sql.rs
crates/llama-chat-desktop-tools/: Cargo.toml
crates/llama-chat-desktop-tools/src/: annotation_tools.rs  app_script_tools.rs  audio_tools.rs  cancel.rs  clipboard_tools.rs  compound_tools.rs  dialog_tools.rs  display_tools.rs  form_tools.rs  gpu_app_db.rs  helpers.rs  image_tools.rs  input_tools.rs  lib.rs  linux.rs  macos.rs  screenshot_impl.rs  system_tools.rs  tests.rs  trace.rs  ui_automation_tools.rs  win32.rs  window_tools.rs  yolo_detect.rs
crates/llama-chat-desktop-tools/src/app_script_tools/: blender.rs  common.rs  godot.rs  maya.rs  unity.rs  unreal.rs
crates/llama-chat-desktop-tools/src/clipboard_tools/: clipboard_clear.rs  clipboard_files.rs  clipboard_html.rs  clipboard_image.rs  mod.rs
crates/llama-chat-desktop-tools/src/compound_tools/: dialog_nav.rs  element_ops.rs  smart_actions.rs  text_search.rs
crates/llama-chat-desktop-tools/src/input_tools/: high_level.rs  keyboard.rs  mod.rs  mouse.rs
crates/llama-chat-desktop-tools/src/linux/: system.rs
crates/llama-chat-desktop-tools/src/macos/: mod.rs  process.rs  window.rs
crates/llama-chat-desktop-tools/src/ocr_tools/: mod.rs  ocr_common.rs  ocr_macos.rs  ocr_ocrs.rs  ocr_tesseract.rs  ocr_winrt.rs
crates/llama-chat-desktop-tools/src/overlay_tools/: mod.rs  scripts.rs
crates/llama-chat-desktop-tools/src/recording_tools/: gif_encoder.rs  mod.rs  state.rs  tests.rs
crates/llama-chat-desktop-tools/src/ui_automation_tools/: windows_ui.rs
crates/llama-chat-desktop-tools/src/win32/: clipboard.rs  input.rs  process.rs  registry.rs  types.rs  window.rs  window_search.rs
crates/llama-chat-desktop-tools/src/window_tools/: window_enumeration.rs  window_keys.rs  window_management.rs
crates/llama-chat-engine/: Cargo.toml
crates/llama-chat-engine/src/: browser.rs  command_executor.rs  compaction.rs  config_ext.rs  context_eval.rs  generation.rs  gguf_info.rs  gguf_utils.rs  jinja_templates.rs  lib.rs  loop_detection.rs  model_manager.rs  prompt_builder.rs  sampler.rs  stop_conditions.rs  sub_agent.rs  sub_checks.rs  templates.rs  token_loop.rs  tool_dispatch.rs  tool_grammar.rs  tool_output.rs  tool_tags.rs  utils.rs  vram_calculator.rs
crates/llama-chat-engine/src/command_executor/: batch_exec.rs  execute_parallel.rs  inject.rs  mod.rs  output_assembly.rs  single_exec.rs
crates/llama-chat-engine/src/generation/: mod.rs  output.rs
crates/llama-chat-engine/src/jinja_templates/: mod.rs  tests.rs  tool_catalog.rs
crates/llama-chat-engine/src/templates/: chat_templates.rs  mod.rs  system_prompts.rs  tests.rs
crates/llama-chat-engine/src/token_loop/: shared.rs  watchdog.rs
crates/llama-chat-engine/src/tool_output/: image_summary.rs  mod.rs  summarize.rs  truncate.rs
crates/llama-chat-tools/: Cargo.toml
crates/llama-chat-tools/src/: browser_session.rs  browser_tools.rs  command_tools.rs  doc_extractors.rs  file_tools.rs  lib.rs  mcp_tools.rs  parsing.rs  screenshot_tool.rs  search_tools.rs  telegram.rs  tool_defs.rs  tool_parser.rs  utils.rs  web_search.rs  wry_browser.rs
crates/llama-chat-tools/src/browser_session/: backends.rs  mod.rs  session_state.rs  tauri_session.rs
crates/llama-chat-tools/src/dispatch/: desktop_dispatch.rs  mod.rs  text_tools.rs
crates/llama-chat-tools/src/doc_extractors/: html_markdown.rs  misc.rs  mod.rs  office.rs  pdf.rs
crates/llama-chat-tools/src/file_tools/: editing.rs
crates/llama-chat-tools/src/parsing/: formats.rs
crates/llama-chat-tools/src/tool_defs/: mod.rs
crates/llama-chat-types/: Cargo.toml
crates/llama-chat-types/src/: event_log.rs  ipc_types.rs  lib.rs  logger.rs  mcp_config.rs  models.rs  native_tool_result.rs  tool_tags.rs
crates/llama-chat-types/src/models/: payloads.rs
crates/llama-chat-web/: Cargo.toml
crates/llama-chat-web/src/: agent_heartbeat_runner.rs  keychain.rs  lib.rs  native_tools_bridge.rs  request_parsing.rs  skills.rs  websocket.rs  worker_pool.rs
crates/llama-chat-web/src/providers/: bridge_mcp_proxy.rs  claude_code.rs  codex.rs  gemini.rs  mod.rs  openai_compat.rs  openai_compat_request.rs  openai_compat_streaming.rs  openai_compat_types.rs
crates/llama-chat-web/src/remote/: mdns.rs  mod.rs  upnp.rs
crates/llama-chat-web/src/routes/: agent_heartbeat.rs  agents.rs  app_errors.rs  approval.rs  chat.rs  config.rs  conversation.rs  download.rs  (+17 more)
crates/llama-chat-worker/: Cargo.toml
crates/llama-chat-worker/src/: lib.rs  prevent_sleep.rs
crates/tests/: Cargo.toml  test_data_gen_tokens.txt  test_data_inject.txt  test_data_prompt.txt
crates/tests/src/: live_tool_injection.rs  main.rs  position_test.rs  pure_gen_test.rs  real_pipeline_test.rs  test_pdf.rs  threaded_injection.rs
(+588 files in other folders)
