[package]
name = "llama_cpp_chat"
version = "0.1.0"
edition = "2021"
default-run = "llama_chat_app"
exclude = ["libs/"]

# Tauri expects a lib.rs with the lib target
[lib]
name = "llama_cpp_chat"
crate-type = ["staticlib", "cdylib", "rlib"]

# Tauri app binary  
[[bin]]
name = "llama_chat_app"
path = "src/main.rs"

# Keep the original CLI binary for testing (disabled for now)
# [[bin]]
# name = "test"
# path = "src/test.rs"

# Web server binary (for Docker deployment)
[[bin]]
name = "llama_chat_web"
path = "src/main_web.rs"

# Temporary utility to check Gemma template
[[bin]]
name = "check_gemma_template"
path = "check_gemma_template.rs"

# Test binary for debugging model loading and tokenization
[[bin]]
name = "test_model"
path = "src/test_model.rs"

# Test binary for vision/mmproj loading (requires: --features vision)
[[bin]]
name = "test_vision"
path = "src/test_vision.rs"
required-features = ["vision"]

# MCP server binary (exposes desktop automation tools to Claude Code)
[[bin]]
name = "mcp_desktop_tools"
path = "src/mcp_server.rs"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "warn"
uninlined_format_args = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
cognitive_complexity = "warn"

[profile.dev]
debug = 0
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[dependencies]
# Tauri framework
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"

# LLaMA dependencies - with conditional CUDA GPU acceleration
llama-cpp-2 = { path = "deps/llama-cpp-rs/llama-cpp-2" }
llama-cpp-sys-2 = { path = "deps/llama-cpp-rs/llama-cpp-sys-2" }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Web server dependencies
hyper = { version = "0.14", features = ["full"] }
urlencoding = "2.1"
async-stream = "0.3"
tokio-tungstenite = "0.21"
futures-util = "0.3"
walkdir = "2.5"  # For recursive directory listing
ignore = "0.4"   # ripgrep's directory walker with .gitignore support

# GGUF file parser for reading model metadata
gguf-llms = "0.0.2"

# WebSocket support
sha1 = "0.10"
base64 = "0.21"

# Logging
log = "0.4"
log4rs = "1.2"
chrono = "0.4"
lazy_static = "1.4"

# Jinja2 template engine for chat templates
minijinja = { version = "2.3", features = ["json"] }

# SQLite database
rusqlite = { version = "0.30", features = ["bundled"] }

# Cross-thread channels for worker process IPC
crossbeam-channel = "0.5"

# MCP (Model Context Protocol) client + server for external tool servers
rmcp = { version = "1.1", default-features = false, features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-server"] }

# HTTP framework for MCP HTTP/SSE transport (avoids stdio pipe stalling)
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = "0.7"

# HTTP client for web fetching (ureq: lightweight, blocking, rustls for TLS)
ureq = { version = "2.9", default-features = false, features = ["tls"] }

# HTML to Markdown conversion (LLM-optimized output, replaces html2text when enabled)
htmd = "0.1"

# Readability article extraction (Mozilla algorithm — strips nav, ads, footer)
dom_smoothie = "0.15"

# PDF text extraction (pure Rust, no external dependencies)
pdf-extract = "0.10"

# DOCX/PPTX text extraction (ZIP + XML parsing)
zip = { version = "8.1", default-features = false, features = ["deflate"] }
quick-xml = "0.37"

# XLSX/XLS spreadsheet reading (pure Rust)
calamine = "0.26"

# CSV structured parsing
csv = "1.3"

# Email (.eml) parsing
mailparse = "0.15"

# RTF text extraction
rtf-parser = "0.3"

# HTML to text conversion
html2text = "0.12"

# Native OS file dialogs (folder picker for web mode)
rfd = "0.15"

# Headless Chrome for web search (bypasses CAPTCHAs)
headless_chrome = "1.0"
encoding_rs = "0.8.35"

# Cross-platform screen capture (Windows, macOS, Linux X11)
xcap = "0.8"

# Cross-platform keyboard/mouse input simulation (computer use tools)
enigo = "0.6"

# Image processing (pixel ops for screenshot_diff/region, already transitive via xcap)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Cross-platform clipboard (text/image, replaces Win32 clipboard on macOS/Linux)
arboard = "3"

# Cross-platform process info (replaces Win32 Toolhelp32/psapi on macOS/Linux)
sysinfo = "0.33"

# libc for Unix fd operations (dup/dup2 in worker IPC)
[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

# Windows-specific: OCR + UI Automation via WinRT/COM APIs
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Media_Ocr", "Graphics_Imaging", "Foundation", "Storage_Streams", "Globalization",
    "Win32_Foundation", "Win32_UI_Accessibility", "Win32_System_Com",
] }

# System monitoring (optional - requires rebuild)
# sysinfo = "0.30"
# nvml-wrapper = { version = "0.9", optional = true }

[features]
default = []
mock = []  # Mock implementation for E2E tests
cuda = ["llama-cpp-2/cuda"]  # CUDA support feature
metal = ["llama-cpp-2/metal"]  # Metal support feature for macOS
vision = ["llama-cpp-2/mtmd"]  # Vision/multimodal support (disabled by default, re-enable later)

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
cmake = "0.1"
ureq = { version = "2.9", default-features = false, features = ["tls"] }
zip = { version = "8.1", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1.1"
