[workspace]
members = ["crates/llama-chat-types", "crates/llama-chat-db", "crates/llama-chat-config", "crates/llama-chat-command", "crates/llama-chat-desktop-tools", "crates/llama-chat-tools", "crates/llama-chat-engine", "crates/llama-chat-worker", "crates/llama-chat-web", "."]
exclude = ["tools/ensure-cmake"]

# Inherited by deps/llama-cpp-rs workspace members (llama-cpp-2, llama-cpp-sys-2)
[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
tracing-core = "0.1"
encoding_rs = "0.8.35"
hf-hub = { version = "0.5.0" }
criterion = "0.5.1"
pprof = "0.13.0"
bindgen = "0.72.1"
cc = "1.2.58"
anyhow = "1.0.102"
clap = "4.6.0"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Inherited by deps/llama-cpp-rs/llama-cpp-2 [lints] workspace = true
[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }

[package]
name = "llama_cpp_chat"
version = "0.1.0"
edition = "2021"
default-run = "llama_chat_app"
exclude = ["libs/"]

# Tauri expects a lib.rs with the lib target
[lib]
name = "llama_cpp_chat"
crate-type = ["staticlib", "cdylib", "rlib"]

# Tauri app binary  
[[bin]]
name = "llama_chat_app"
path = "src/main.rs"

# Keep the original CLI binary for testing (disabled for now)
# [[bin]]
# name = "test"
# path = "src/test.rs"

# Web server binary (for Docker deployment)
[[bin]]
name = "llama_chat_web"
path = "src/main_web.rs"

# Temporary utility to check Gemma template
[[bin]]
name = "check_gemma_template"
path = "check_gemma_template.rs"

# Test binary for debugging model loading and tokenization
[[bin]]
name = "test_model"
path = "src/test_model.rs"

# Test binary for vision/mmproj loading (requires: --features vision)
[[bin]]
name = "test_vision"
path = "src/test_vision.rs"
required-features = ["vision"]

# MCP server binary (exposes desktop automation tools to Claude Code)
[[bin]]
name = "mcp_desktop_tools"
path = "src/mcp_server.rs"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "warn"
uninlined_format_args = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
cognitive_complexity = "warn"

[profile.dev]
debug = 0
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[dependencies]
# Shared types crate (workspace member)
llama-chat-types = { path = "crates/llama-chat-types" }
# Database crate (workspace member)
llama-chat-db = { path = "crates/llama-chat-db" }
# Config crate (workspace member)
llama-chat-config = { path = "crates/llama-chat-config" }
# Command execution crate (workspace member)
llama-chat-command = { path = "crates/llama-chat-command" }
# Desktop automation tools crate (workspace member)
llama-chat-desktop-tools = { path = "crates/llama-chat-desktop-tools" }
# Native tools crate (workspace member)
llama-chat-tools = { path = "crates/llama-chat-tools" }
# Chat engine crate (workspace member)
llama-chat-engine = { path = "crates/llama-chat-engine" }
# Worker process crate (workspace member)
llama-chat-worker = { path = "crates/llama-chat-worker" }
# Web server components crate (workspace member)
llama-chat-web = { path = "crates/llama-chat-web" }

# ONNX Runtime for YOLO UI element detection
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "copy-dylibs"] }

# Tauri framework
tauri = { version = "2.0", features = ["tray-icon", "unstable"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"

# LLaMA dependencies - with conditional CUDA GPU acceleration
llama-cpp-2 = { path = "deps/llama-cpp-rs/llama-cpp-2" }
llama-cpp-sys-2 = { path = "deps/llama-cpp-rs/llama-cpp-sys-2" }
uuid = { version = "1.0", features = ["v4"] }

# Web server dependencies
hyper = { version = "0.14", features = ["full"] }
urlencoding = "2.1"
futures-util = "0.3"

# GGUF file parser for reading model metadata
gguf-llms = "0.0.2"

# WebSocket support
base64 = "0.21"

# Logging
log = "0.4"
log4rs = "1.2"
chrono = "0.4"
lazy_static = "1.4"

# SQLite database
rusqlite = { version = "0.30", features = ["bundled"] }

# MCP (Model Context Protocol) client + server for external tool servers
rmcp = { version = "1.1", default-features = false, features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-server", "transport-streamable-http-client-reqwest"] }

# HTTP framework for MCP HTTP/SSE transport (avoids stdio pipe stalling)
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "query"] }
tokio-util = "0.7"

# HTTP client for web fetching
ureq = { version = "2.9", default-features = false, features = ["tls"] }

# HTML to text conversion
html2text = "0.12"

# Native OS file dialogs (folder picker for web mode)
rfd = "0.15"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# libc for Unix fd operations (dup/dup2 in worker IPC)
[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

# Windows-specific: OCR + UI Automation via WinRT/COM APIs
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Media_Ocr", "Graphics_Imaging", "Foundation", "Storage_Streams", "Globalization",
    "Win32_Foundation", "Win32_UI_Accessibility", "Win32_System_Com",
] }
# WebView2 COM bindings — direct access to ICoreWebView2::ExecuteScript with callback
# (Tauri only exposes fire-and-forget eval, this lets us get JS return values)
webview2-com = "0.38"

# System monitoring (optional - requires rebuild)
# sysinfo = "0.30"
# nvml-wrapper = { version = "0.9", optional = true }

[features]
default = []
mock = []  # Mock implementation for E2E tests
cuda = ["llama-cpp-2/cuda", "llama-chat-types/cuda", "llama-chat-web/cuda"]  # CUDA support feature
metal = ["llama-cpp-2/metal", "llama-chat-types/metal"]  # Metal support feature for macOS
vision = ["llama-cpp-2/mtmd", "llama-chat-types/vision", "llama-chat-engine/vision", "llama-chat-worker/vision", "llama-chat-web/vision"]  # Vision/multimodal support (disabled by default, re-enable later)
dynamic-backends = ["llama-cpp-2/dynamic-backends", "llama-chat-types/dynamic-backends", "llama-chat-engine/dynamic-backends", "llama-chat-worker/dynamic-backends", "llama-chat-web/dynamic-backends"]  # Runtime GPU backend loading (CUDA/Vulkan as DLLs)
# Enables Tauri's embedded asset protocol so release builds use `frontendDist`
# instead of `devUrl`. `cargo tauri build` sets this automatically; plain
# `cargo build --release` needs it passed explicitly (or via the wrapper script).
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
cmake = "0.1"
ureq = { version = "2.9", default-features = false, features = ["tls"] }
zip = { version = "8.1", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1.1"
