[package]
name = "llama-chat-db"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-chat-types = { path = "../llama-chat-types" }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["sync"] }
