[package]
name = "llama-chat-desktop-tools"
version = "0.1.0"
edition = "2021"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "warn"
uninlined_format_args = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
cognitive_complexity = "warn"

[dependencies]
llama-chat-types = { path = "../llama-chat-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.6"
xcap = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ocrs = "0.9"
rten = "0.13"
arboard = "3"
sysinfo = "0.33"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "copy-dylibs"] }
chrono = "0.4"
log = "0.4"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Media_Ocr", "Graphics_Imaging", "Foundation", "Storage_Streams", "Globalization",
    "Win32_Foundation", "Win32_UI_Accessibility", "Win32_System_Com",
] }
