[package]
name = "llama-chat-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.4"
llama-cpp-2 = { path = "../../deps/llama-cpp-rs/llama-cpp-2" }

[features]
default = []
vision = ["llama-cpp-2/mtmd"]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
dynamic-backends = ["llama-cpp-2/dynamic-backends"]
