[package]
name = "llama-chat-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llama-chat-tests"
path = "src/main.rs"

[[bin]]
name = "test-pdf"
path = "src/test_pdf.rs"

[[bin]]
name = "live-tool-injection"
path = "src/live_tool_injection.rs"

[[bin]]
name = "threaded-injection"
path = "src/threaded_injection.rs"

[[bin]]
name = "position-test"
path = "src/position_test.rs"

[[bin]]
name = "pure-gen-test"
path = "src/pure_gen_test.rs"

[[bin]]
name = "real-pipeline-test"
path = "src/real_pipeline_test.rs"

[dependencies]
llama-cpp-2 = { path = "../../deps/llama-cpp-rs/llama-cpp-2" }
llama-chat-engine = { path = "../llama-chat-engine" }
llama-chat-db = { path = "../llama-chat-db" }
llama-chat-types = { path = "../llama-chat-types" }
llama-chat-tools = { path = "../llama-chat-tools" }
llama-chat-config = { path = "../llama-chat-config" }
pdf_oxide = "0.1"
pdf-extract = "0.10"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
vision = ["llama-cpp-2/mtmd", "llama-chat-engine/vision"]

[lints.rust]
warnings = "allow"
